# threatbus

./: .gitignore  CHANGELOG.md  COPYING  Dockerfile  Dockerfile_integration  Dockerfile_pyvast_threatbus  Dockerfile_stix_shifter_threatbus  Makefile  README.md  config.yaml  config.yaml.example  config_default.yaml  config_integration_test.yaml  ictl  lgtm.yml  pyproject.toml  requirements.txt  robo  setup.py  shell.nix  sitecustomize.py  threat-bus  vast.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-egg.yml  style-check.yml
apps/stix-shifter/: CHANGELOG.md  Dockerfile  README.md  config.yaml.example  pyproject.toml  setup.py
apps/stix-shifter/stix_shifter_threatbus/: message_mapping.py  shifter.py  test_message_mapping.py
apps/suricata/: CHANGELOG.md  Dockerfile  README.md  config.yaml.example  pyproject.toml  setup.py
apps/suricata/suricata_threatbus/: suricata.py
apps/vast/: CHANGELOG.md  Dockerfile  Makefile  README.md  config.yaml.example  message_mapping.py  pyproject.toml  pyvast_threatbus.py  requirements.txt  setup.py  test_message_mapping.py  vast-bridge.py
apps/vast/pyvast_threatbus/: message_mapping.py  metrics.py  pyvast_threatbus.py  test_message_mapping.py
apps/vast/vast_threatbus/: message_mapping.py  test_message_mapping.py  test_metrics.py  vast_threatbus.py
apps/zeek/: gen-notices.zeek  threat-bus.zeek  threatbus.zeek
apps/zmq-app-template/: Makefile  README.md  pyproject.toml  setup.py
apps/zmq-app-template/zmq_app_template/: template.py
benchmark/: README.md  bench.json  benchmark_config.yaml  rabbitmq_sender.py  simple-bench.sh
docker/pyvast-threatbus/: Dockerfile
docker/stix-shifter-threatbus/: Dockerfile
docker/suricata-threatbus/: Dockerfile
docker/vast-threatbus/: Dockerfile
plugins/apps/threatbus-misp/: README.md  misp_message_mapping.py  setup.py  test_misp_message_mapping.py  threatbus_misp.py
plugins/apps/threatbus-zeek/: README.md  setup.py  test_threatbus_zeek.py  test_zeek_message_mapping.py  threatbus_zeek.py  zeek_message_mapping.py
plugins/apps/threatbus_cif3/: README.md  message_mapping.py  plugin.py  pyproject.toml  setup.py
plugins/apps/threatbus_cif3/threatbus_cif3/: message_mapping.py  plugin.py
plugins/apps/threatbus_misp/: Makefile  README.md  message_mapping.py  plugin.py  pyproject.toml  setup.py  test_message_mapping.py
plugins/apps/threatbus_misp/threatbus_misp/: message_mapping.py  plugin.py  test_message_mapping.py
plugins/apps/threatbus_vast/: README.md  message_mapping.py  plugin.py  setup.py  test_message_mapping.py
plugins/apps/threatbus_zeek/: install_broker.bash  message_mapping.py  plugin.py  pyproject.toml  setup.py  test_message_mapping.py
plugins/apps/threatbus_zeek/threatbus_zeek/: message_mapping.py  plugin.py  test_message_mapping.py
plugins/apps/threatbus_zmq/: README.md  pyproject.toml  setup.py
plugins/apps/threatbus_zmq/threatbus_zmq/: plugin.py  test_message_mapping.py
plugins/apps/threatbus_zmq_app/: README.md  message_mapping.py  plugin.py  pyproject.toml  setup.py  test_message_mapping.py
plugins/apps/threatbus_zmq_app/threatbus_zmq_app/: message_mapping.py  plugin.py
plugins/backbones/file_benchmark/: README.md  plugin.py  pyproject.toml  setup.py
plugins/backbones/file_benchmark/file_benchmark/: plugin.py
plugins/backbones/threatbus-inmem/: README.md  setup.py  threatbus_inmem.py
plugins/backbones/threatbus_file_benchmark/: pyproject.toml
plugins/backbones/threatbus_inmem/: README.md  plugin.py  pyproject.toml  setup.py
plugins/backbones/threatbus_inmem/threatbus_inmem/: plugin.py
plugins/backbones/threatbus_rabbitmq/: Makefile  README.md  __init__.py  helpers.py  plugin.py  pyproject.toml  setup.py  test_helpers.py  test_plugin.py
plugins/backbones/threatbus_rabbitmq/threatbus_rabbitmq/: __init__.py  plugin.py  rabbitmq_consumer.py  rabbitmq_publisher.py
systemd/: README.md  pyvast-threatbus.service  threatbus.service  vast-threatbus.service
tests/: test_zeek.py
tests/integration/: docker-compose.yml  test_message_roundtrips.py  test_misp.py  test_misp_inmem.py  test_misp_zeek_inmem.py  test_rabbitmq.py  test_zeek.py  test_zeek_app.py  test_zeek_inmem.py  test_zmq_app_management.py  test_zmq_app_message_roundtrips.py
tests/integration/components/: Dockerfile_broker  simple_broker.py
tests/resources/: example.com-intel-sighting.pcap
tests/unit/: test_misp.py  test_vast.py  test_zeek.py
tests/util/: async_util.py  dummy_config.py
tests/utils/: kafka_receiver.py  kafka_sender.py  misp_zmq_subscriber.py  rabbitmq_sender.py  zeek_receiver.py  zeek_sender.py  zmq_receiver.py  zmq_sender.py
tests/utils/misp-ioc-sender/: README.md  config.yaml.example  misp-ioc-sender.py  requirements.txt
threatbus/: __init__.py  appspecs.py  backbonespecs.py  controller.py  data.py  logger.py  misp.py  stix2_helpers.py  stoppable_worker.py  test_data.py  test_stix2_helpers.py  threatbus.py  types.py  vast.py  zeek.py
utils/: zeek_receiver.py  zeek_sender.py
zeek/: intel.bro  robo.bro  threat-bus.zeek
