[tool.poetry]
name = "threatbus"
version = "2021.04.29"
authors = ["Tenzir <engineering@tenzir.com>"]
classifiers=[
    # https://pypi.org/classifiers/
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Security",
    "Topic :: Software Development :: Object Brokering",
    "Topic :: System :: Distributed Computing",
]
description = "The missing link to connect open-source threat intelligence tools."
keywords=[
    "threatbus",
    "threat intelligence",
    "intel",
    "sightings",
    "open source threat intelligence",
]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/tenzir/threatbus/"

[tool.poetry.scripts]
threatbus = "threatbus.threatbus:main"

[tool.poetry.dependencies]
python = "^3.7"
coloredlogs = ">= 10.0"
confuse = "^1.0"
pluggy = "^0.13"
python-dateutil = "^2.8.1"
stix2 = "^2.1"
stix2-patterns = ">= 0.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

threatbus-inmem = { path = "plugins/backbones/threatbus_inmem", develop = true }
threatbus-rabbitmq = { path = "plugins/backbones/threatbus_rabbitmq", develop = true }
file-benchmark = { path = "plugins/backbones/file_benchmark", develop = true }
threatbus-cif3 = { path = "plugins/apps/threatbus_cif3", develop = true }
threatbus-misp = { path = "plugins/apps/threatbus_misp", extras = ["zmq"], develop = true }
threatbus-zeek = { path = "plugins/apps/threatbus_zeek", develop = true }
threatbus-zmq-app = { path = "plugins/apps/threatbus_zmq_app", develop = true }
pyvast-threatbus = { path = "apps/vast", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/tenzir/threatbus/issues"
