[tool.poetry]
name = "stix-shifter-threatbus"
version = "2021.09.30"
authors = ["Tenzir <engineering@tenzir.com>"]
classifiers = [
  # https://pypi.org/classifiers/
  "Development Status :: 4 - Beta",
  "Environment :: Plugins",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
  "Topic :: Software Development :: Object Brokering"
]
description = "Bridges the gap between Threat Bus and STIX-Shifter"
documentation = "https://docs.tenzir.com/threatbus/"
keywords = [
  "open source",
  "threatbus",
  "Threat Bus",
  "threat intelligence",
  "TI",
  "TI dissemination",
]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/tenzir/threatbus/"

[tool.poetry.dependencies]
python = "^3.8"
threatbus = "2021.9.30"
pyzmq = ">=19"
dynaconf = ">3.1.4"
stix-shifter = ">=3.4.2"
stix-shifter-utils = ">=3.4.2"
stix2 = ">=3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/tenzir/threatbus/issues"
