[tool.poetry]
name = "suricata-threatbus"
version = "2021.09.30"
authors = ["Tenzir <engineering@tenzir.com>"]
classifiers = [
  # https://pypi.org/classifiers/
  "Development Status :: 4 - Beta",
  "Environment :: Plugins",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
  "Topic :: Software Development :: Object Brokering"
]
description = "A simple ZMQ app to connect to Threat Bus and ingest indicators as Suricata rules via `suricatasc`"
documentation = "https://docs.tenzir.com/threatbus/"
keywords = [
  "open source",
  "Suricata",
  "suricatasc",
  "IDS rules",
  "threatbus",
  "Threat Bus",
  "threat intelligence",
  "TI",
  "TI dissemination",
]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/tenzir/threatbus/"

[tool.poetry.dependencies]
python = "^3.8"
threatbus = "2021.9.30"
parsuricata = "^0.3.2"
pyzmq = ">=19"
dynaconf = ">3.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/tenzir/threatbus/issues"
