[tool.poetry]
name = "vast-threatbus"
version = "2021.9.30"
authors = ["Tenzir <engineering@tenzir.com>"]
classifiers = [
  # https://pypi.org/classifiers/
  "Development Status :: 4 - Beta",
  "Environment :: Plugins",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
  "Topic :: Security",
  "Topic :: Software Development :: Object Brokering",
  "Topic :: System :: Distributed Computing",
]
description = "Connect the open source telemetry engine VAST with Threat Bus, the open source threat intelligence dissemination layer."
documentation = "https://docs.tenzir.com/threatbus/"
keywords = [
  "open source",
  "vast",
  "threatbus",
  "Threat Bus",
  "threat intelligence",
  "TI",
  "TI dissemination",
]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/tenzir/threatbus/"

[tool.poetry.scripts]
pyvast-threatbus = "pyvast_threatbus.pyvast_threatbus:main"

[tool.poetry.dependencies]
python = "^3.8"
threatbus = { path = "../.." }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/tenzir/threatbus/issues"
