[tool.poetry]
name = "zmq-app-template"
version = "2021.09.30"
authors = ["Tenzir <engineering@tenzir.com>"]
classifiers = [
  # https://pypi.org/classifiers/
  "Development Status :: 4 - Beta",
  "Environment :: Plugins",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
  "Topic :: Software Development :: Object Brokering"
]
description = "Application template to connect to Threat Bus via ZeroMQ"
documentation = "https://docs.tenzir.com/threatbus/"
keywords = [
  "open source",
  "threatbus",
  "Threat Bus",
  "threat intelligence",
  "TI",
  "TI dissemination",
]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/tenzir/threatbus/"

[tool.poetry.dependencies]
python = "^3.8"
threatbus = "2021.9.30"
dynaconf = ">3.1.4"
stix2 = ">=3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/tenzir/threatbus/issues"
