[tool.poetry]
name = "threatbus-cif3"
version = "2021.04.29"
authors = ["Tenzir <engineering@tenzir.com>"]
classifiers = [
    # https://pypi.org/classifiers/
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Security",
    "Topic :: Software Development :: Object Brokering",
    "Topic :: System :: Distributed Computing",
]
description = "A plugin to enable indicators to be submitted to CIFv3 in real-time."
documentation = "https://docs.tenzir.com/threatbus/"
keywords = [
    "cif",
    "cifv3",
    "cif3",
    "renisac",
    "ren-isac",
    "threatbus",
    "Threat Bus",
    "threat intelligence",
    "TI",
    "TI dissemination",
]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/tenzir/threatbus/"

[tool.poetry.plugins."threatbus.app"]
cif3 = "threatbus_cif3.plugin"

[tool.poetry.dependencies]
python = "^3.7"
threatbus = "2021.04.29"

cifsdk = "^3.0.0rc4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/tenzir/threatbus/issues"
