[tool.poetry]
name = "threatbus-misp"
version = "2021.09.30"
authors = ["Tenzir <engineering@tenzir.com>"]
classifiers=[
    # https://pypi.org/classifiers/
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Security",
    "Topic :: Software Development :: Object Brokering",
    "Topic :: System :: Distributed Computing",
]
description = "A plugin to enable threatbus communication with MISP."
documentation = "https://docs.tenzir.com/threatbus/"
keywords = [
    "MISP",
    "zeromq",
    "zmq",
    "kafka",
    "threatbus",
    "Threat Bus",
    "threat intelligence",
    "TI",
    "TI dissemination",
]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/tenzir/threatbus/"

[tool.poetry.plugins."threatbus.app"]
misp = "threatbus_misp.plugin"

[tool.poetry.dependencies]
python = "^3.8"
threatbus = { path = "../../..", develop = true }

pymisp = "^2.4.120"

confluent-kafka = { version = "^1.3.0", optional = true }
pyzmq = { version = ">=18.1.1", optional = true }
stix2 = "^3.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
kafka = [
    "confluent-kafka"
]
zmq = [
    "pyzmq"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/tenzir/threatbus/issues"
