[tool.poetry]
name = "threatbus-zeek"
version = "2021.09.30"
authors = ["Tenzir <engineering@tenzir.com>"]
classifiers=[
    # https://pypi.org/classifiers/
    "Development Status :: 3 - Alpha",
    "Environment :: Plugins",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Security",
    "Topic :: Software Development :: Object Brokering",
    "Topic :: System :: Distributed Computing",
]
description = "A plugin to enable threatbus communication with Zeek network monitor."
documentation = "https://docs.tenzir.com/threatbus/"
keywords=[
    "Zeek",
    "intrusion detection",
    "IDS",
    "broker",
    "NSM",
    "network security monitoring",
    "threatbus",
    "Threat Bus",
    "threat intelligence",
    "TI",
    "TI dissemination",
]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/tenzir/threatbus/"

[tool.poetry.plugins."threatbus.app"]
zeek = "threatbus_zeek.plugin"

[tool.poetry.dependencies]
python = "^3.8"
threatbus = { path = "../../.." }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/tenzir/threatbus/issues"
