[tool.poetry]
name = "threatbus-zmq-app"
version = "2021.04.29"
authors = ["Tenzir <engineering@tenzir.com>"]
classifiers = [
    # https://pypi.org/classifiers/
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Security",
    "Topic :: Software Development :: Object Brokering",
    "Topic :: System :: Distributed Computing",
]
description = "A plugin to connect apps via ZeroMQ."
documentation = "https://docs.tenzir.com/threatbus/"
keywords = [
    "zeromq",
    "zmq",
    "threatbus",
    "Threat Bus",
    "threat intelligence",
    "TI",
    "TI dissemination",
]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/tenzir/threatbus/"

[tool.poetry.plugins."threatbus.app"]
zmq-app = "threatbus_zmq_app.plugin"

[tool.poetry.dependencies]
python = "^3.7"
threatbus = "2021.04.29"

confluent-kafka = { version = "^1.3.0", optional = true }
pyzmq = { version = ">=18.1.1", optional = true }

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
kafka = [
    "confluent-kafka"
]
zmq = [
    "pyzmq"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/tenzir/threatbus/issues"
