[tool.poetry]
name = "threatbus-rabbitmq"
version = "2021.04.29"
authors = ["Tenzir <engineering@tenzir.com>"]
classifiers=[
    # https://pypi.org/classifiers/
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Object Brokering"
]
description = "A RabbitMQ backbone for threatbus."
documentation = "https://docs.tenzir.com/threatbus/"
keywords=[
    "message broker",
    "rabbitmq",
    "rabbit",
    "mq",
    "threatbus",
    "Threat Bus",
    "threat intelligence",
    "TI",
    "TI dissemination",
]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/tenzir/threatbus/"

[tool.poetry.plugins."threatbus.backbone"]
rabbitmq = "threatbus_rabbitmq.plugin"

[tool.poetry.dependencies]
python = "^3.7"
threatbus = "2021.04.29"

pika = "^1.1.0"
retry = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/tenzir/threatbus/issues"
